# rss_ai_screening

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: update.yml
public/: custom.xml  run_log.jsonl
src/: config.py  embed.py  extract.py  feed_fetch.py  main.py  raindrop.py  rss_gen.py  run_log.py  score.py  store.py
