[project]
name = "rss-ai-screening"
version = "0.1.0"
description = "Personal RSS feed filtered by AI similarity"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "feedgen>=1.0",
    "httpx>=0.27",
    "python-dateutil>=2.9",
]
